--- a/command line/chromium-flags.conf
+++ b/command line/chromium-flags.conf
@@ -9,7 +9,8 @@
 --history-entry-requires-user-gesture 
 --disable-password-generation 
 --disable-push-api-background-mode 
---enable-quic 
+--enable-quic (optional)
+--prerender-from-omnibox=disabled
 --use-simple-cache-backend=on 
 --disable-single-click-autofill 
 --site-per-process 
